updated webClient invnentory and product url

--- a/order/pom.xml
+++ b/order/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>inventory</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.abccompany</groupId>
+            <artifactId>product</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 
