aded kafka in order section

--- a/order/pom.xml
+++ b/order/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>product</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 
